--- a/about.html
+++ b/about.html
@@ -4,13 +4,13 @@
         <title> Інформація про мене </title>
         <style>
              body {
-            background-color: rgb(255, 233, 199);
+              background-color: #e7dfff;
           }
           hr {
-            border: none; 
-                background-color:rgb(253, 193, 62);
-                color:rgb(253, 193, 62);
-                height: 2px; 
+              border: none;
+              background-color:#d0bfff;
+              color:#d0bfff;
+              height: 2px; 
           }
         </style>
     </head>
@@ -36,5 +36,9 @@
        <p>В мене є дві домашні тварини - собака та кішка. </p>
     <p> Собаку звати Макс, його порода - джек рассел тер'єр. Кішку звати Віска, вона шотландська висловуха. </p>
     <p> І Макс, і Виска народилися в 2016 році. Вони обидва були моїми першими домашніми тваринами. </p>
+    <p align="center">
+        <img src="https://4.bp.blogspot.com/-X5pYMRG5wIU/ViXzJToenCI/AAAAAAAAA8c/a8ZyXjiJ6K4/s1600/Jack-Russell-Terrier.jpg" alt="Мій пес" title="Мій пес" width="500">
+        <img src="https://i.pinimg.com/736x/17/1b/f0/171bf0735c7f73774ef20447a50dd85c.jpg" alt="Моя кішка" title="Моя кішка" width="500">
+    </p>
     </body>
 </html>
