--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
         <meta charset="utf-8">
         <title>Головна сторінка</title>
         <style>
-            body {
-           background-color: rgb(255, 233, 199);
-         }
-         hr {
-           border: none; 
-               background-color:rgb(253, 193, 62);
-               color:rgb(253, 193, 62);
-               height: 2px; 
-         }
+          body {
+              background-color: #e7dfff;
+          }
+          hr {
+              border: none;
+              background-color:#d0bfff;
+              color:#d0bfff;
+              height: 2px; 
+          }
        </style>
     </head>
     <body>
