--- a/myschool.html
+++ b/myschool.html
@@ -4,13 +4,13 @@
         <title> Моя школа </title>
         <style>
           body {
-            background-color: rgb(255, 233, 199);
+              background-color: #e7dfff;
           }
           hr {
-            border: none; 
-                background-color:rgb(253, 193, 62);
-                color:rgb(253, 193, 62);
-                height: 2px; 
+              border: none;
+              background-color:#d0bfff;
+              color:#d0bfff;
+              height: 2px; 
           }
 
         </style>
@@ -41,6 +41,7 @@
               2016 року 17–19 березня в Київському Палаці дітей та юнацтва Міністерство освіти і науки України, Національна академія педагогічних наук України і компанія «Виставковий Світ» проводили Сьому Міжнародну виставку «Сучасні заклади освіти – 2016».Тема експозиції «Освіта Луганщини» – «Інноваційно-освітній простір регіону». СЗШ № 18 взяла участь у номінації "Здоров’я та безпека в сучасному інноваційно орієнтованому освітньому просторі". Досвід було визнано актуальним, і заклад отримав нагороду МОНУ і НАПНУ як сучасний інноваційний заклад України.
             </li>
           </ul>
+          <p align="center"><img src="https://sevaleoschool18.ucoz.ru/_tbkp/shapka-shkola_na_sajt-2_doc1.jpg" alt="Моя школа" title="Моя школа" width="700"></p>
           
       </body>
 </html>
