--- a/about.html
+++ b/about.html
@@ -4,41 +4,25 @@
         <title> Інформація про мене </title>
         <style>
              body {
-              background-color: #e7dfff;
-          }
-          hr {
-              border: none;
-              background-color:#d0bfff;
-              color:#d0bfff;
-              height: 2px; 
-          }
+                 background: url(images/mebg.jpg);
+                 background-size: cover;
+             }
         </style>
     </head>
     <body>
-        <hr>
         <h1 align="center">
             Загальна інформація про мене
         </h1>
-        <hr>
-        <br>
-        
-        Мене звати Кріворотова Аліса Юріївна. Я народилася 8 серпня 2003 року в місті Сєвєродонецьк, Луганська область. Зараз живу в Харкові. Я - студентка, з вересня 2020 року навчаюся на факультеті економіки і менеджменту Харківського національного університету будівництва та архітектури. Я першокурсниця, в університеті вивчаю інформаційні системи та технології.
-        <h2>
-            Моя сім'я
-        </h2>
-       <p> Моя сім'я складається з чотирьох осіб: моєї мами, мого тата, молодшої сестри та мене. </p>
-    <p> Моя мама, Кріворотова Світлана Григорівна, народилася 30 листопада 1978 року, зараз працює реабілітологом, а також паралельно навчається в університет заочно для того, щоб повисити свою кваліфікацію. </p> 
-    <p> Мій батько, Кріворотов Юрій Васильович, народився 31 серпня 1975 року, працює менеджером у будівельній компанії. </p>
-    <p> Мою молодшу сестру звуть Василіса, їй 11 років, зараз вона вчитися в 6 класі, любить малювати, ліпити, займається скелелазінням і тенісом. </p>
-   <h2>
-       Мої домашні улюбленці
-    </h2>
-       <p>В мене є дві домашні тварини - собака та кішка. </p>
-    <p> Собаку звати Макс, його порода - джек рассел тер'єр. Кішку звати Віска, вона шотландська висловуха. </p>
-    <p> І Макс, і Виска народилися в 2016 році. Вони обидва були моїми першими домашніми тваринами. </p>
-    <p align="center">
-        <img src="https://4.bp.blogspot.com/-X5pYMRG5wIU/ViXzJToenCI/AAAAAAAAA8c/a8ZyXjiJ6K4/s1600/Jack-Russell-Terrier.jpg" alt="Мій пес" title="Мій пес" width="500">
-        <img src="https://i.pinimg.com/736x/17/1b/f0/171bf0735c7f73774ef20447a50dd85c.jpg" alt="Моя кішка" title="Моя кішка" width="500">
-    </p>
+        <p>Мене звати Кріворотова Аліса Юріївна. Я народилася 8 серпня 2003 року в місті Сєвєродонецьк, Луганська область. Зараз живу в Харкові. Я - студентка, з вересня 2020 року навчаюся на факультеті економіки і менеджменту Харківського національного університету будівництва та архітектури. Я першокурсниця, в університеті вивчаю інформаційні системи та технології.</p>
+        <p align="center"><img src="images/itsme.png" alt="Це я" title="Це я" width="500"></p>
+        <h2>Моя сім'я</h2>
+          <p> Моя сім'я складається з чотирьох осіб: моєї мами, мого тата, молодшої сестри та мене. </p>
+          <p> Моя мама, Кріворотова Світлана Григорівна, народилася 30 листопада 1978 року, зараз працює реабілітологом, а також паралельно навчається в університет заочно для того, щоб повисити свою кваліфікацію. </p> 
+          <p> Мій батько, Кріворотов Юрій Васильович, народився 31 серпня 1975 року, працює менеджером у будівельній компанії. </p>
+          <p> Мою молодшу сестру звуть Василіса, їй 11 років, зараз вона вчитися в 6 класі, любить малювати, ліпити, займається скелелазінням і тенісом. </p>
+       <h2>Мої домашні улюбленці</h2>
+          <p>В мене є дві домашні тварини - собака та кішка. </p>
+          <p> Собаку звати Макс, його порода - джек рассел тер'єр. Кішку звати Віска, вона шотландська висловуха. </p>
+          <p> І Макс, і Виска народилися в 2016 році. Вони обидва були моїми першими домашніми тваринами. </p>
     </body>
 </html>
