--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
     <hr>
     <h3>Якщо ви хочете дізнатися більше про мене:</h3> 
 <ul>
-   <li> <a href="file:///D:/%D1%83%D0%BD%D0%B8%D0%B2%D0%B5%D1%80%D1%81%D0%B8%D1%82%D0%B5%D1%82/%D0%92%D0%B5%D0%B1-%D1%82%D0%B5%D1%85%D0%BD%D0%BE%D0%BB%D0%BE%D0%B3%D0%B8%D0%B8%20%D0%B8%20%D0%B2%D0%B5%D0%B1-%D0%B4%D0%B8%D0%B7%D0%B0%D0%B9%D0%BD/Krivorotova%20Alisa/about.html">Про мене</a></li>
+   <li> <a href="about.html">Про мене</a></li>
    <li>
-   <a href="file:///D:/%D1%83%D0%BD%D0%B8%D0%B2%D0%B5%D1%80%D1%81%D0%B8%D1%82%D0%B5%D1%82/%D0%92%D0%B5%D0%B1-%D1%82%D0%B5%D1%85%D0%BD%D0%BE%D0%BB%D0%BE%D0%B3%D0%B8%D0%B8%20%D0%B8%20%D0%B2%D0%B5%D0%B1-%D0%B4%D0%B8%D0%B7%D0%B0%D0%B9%D0%BD/Krivorotova%20Alisa/myschool.html">Про мою школу </a></li>
+   <a href="myschool.html">Про мою школу </a></li>
    <li>
-   <a href="file:///D:/%D1%83%D0%BD%D0%B8%D0%B2%D0%B5%D1%80%D1%81%D0%B8%D1%82%D0%B5%D1%82/%D0%92%D0%B5%D0%B1-%D1%82%D0%B5%D1%85%D0%BD%D0%BE%D0%BB%D0%BE%D0%B3%D0%B8%D0%B8%20%D0%B8%20%D0%B2%D0%B5%D0%B1-%D0%B4%D0%B8%D0%B7%D0%B0%D0%B9%D0%BD/Krivorotova%20Alisa/myhobby.html">Мої хобі</a>
+   <a href="myhobby.html">Мої хобі</a>
    </li>
    <li>
-   <a href="file:///D:/%D1%83%D0%BD%D0%B8%D0%B2%D0%B5%D1%80%D1%81%D0%B8%D1%82%D0%B5%D1%82/%D0%92%D0%B5%D0%B1-%D1%82%D0%B5%D1%85%D0%BD%D0%BE%D0%BB%D0%BE%D0%B3%D0%B8%D0%B8%20%D0%B8%20%D0%B2%D0%B5%D0%B1-%D0%B4%D0%B8%D0%B7%D0%B0%D0%B9%D0%BD/Krivorotova%20Alisa/myfuture.html">Як я бачу своє майбутнє</a>
+   <a href="myfuture.html">Як я бачу своє майбутнє</a>
    </li>
 </ul>
 <hr>
