--- a/about.html
+++ b/about.html
@@ -4,37 +4,55 @@
         <title> Інформація про мене </title>
         <style>
              body {
-            background-color: rgb(255, 233, 199);
-          }
-          hr {
-            border: none; 
-                background-color:rgb(253, 193, 62);
-                color:rgb(253, 193, 62);
-                height: 2px; 
-          }
+                 background: url(images/mebg.jpg);
+                 background-size: cover;
+             }
+             ul {
+                 list-style: none;
+                 margin: 0;
+                 padding-left: 0;
+                 margin-top: 25px;
+             }
+             a {
+                 text-decoration: none;
+                 background: #9db9e2;
+                 padding: 10px;
+                 border-radius: 4px;
+                 color: black;
+             }
+             li {
+                 float: left;
+                 margin-right: 5px;
+             }
+             #lol {
+                 background: #528cc2;
+             }
+             
         </style>
     </head>
     <body>
-        <hr>
         <h1 align="center">
             Загальна інформація про мене
         </h1>
-        <hr>
+        <ul>
+            <li><a href="about.html" id="lol">Про мене</a></li>
+            <li><a href="index.html">Головна сторінка</a></li>
+            <li><a href="myschool.html">Про мою школу </a></li>
+            <li><a href="myhobby.html">Мої хобі</a></li>
+            <li><a href="myfuture.html">Як я бачу своє майбутнє</a></li>
+            <li><a href="myschedule.html">Розклад та списки</a></li>
+        </ul>
         <br>
-        
-        Мене звати Кріворотова Аліса Юріївна. Я народилася 8 серпня 2003 року в місті Сєвєродонецьк, Луганська область. Зараз живу в Харкові. Я - студентка, з вересня 2020 року навчаюся на факультеті економіки і менеджменту Харківського національного університету будівництва та архітектури. Я першокурсниця, в університеті вивчаю інформаційні системи та технології.
-        <h2>
-            Моя сім'я
-        </h2>
-       <p> Моя сім'я складається з чотирьох осіб: моєї мами, мого тата, молодшої сестри та мене. </p>
-    <p> Моя мама, Кріворотова Світлана Григорівна, народилася 30 листопада 1978 року, зараз працює реабілітологом, а також паралельно навчається в університет заочно для того, щоб повисити свою кваліфікацію. </p> 
-    <p> Мій батько, Кріворотов Юрій Васильович, народився 31 серпня 1975 року, працює менеджером у будівельній компанії. </p>
-    <p> Мою молодшу сестру звуть Василіса, їй 11 років, зараз вона вчитися в 6 класі, любить малювати, ліпити, займається скелелазінням і тенісом. </p>
-   <h2>
-       Мої домашні улюбленці
-    </h2>
-       <p>В мене є дві домашні тварини - собака та кішка. </p>
-    <p> Собаку звати Макс, його порода - джек рассел тер'єр. Кішку звати Віска, вона шотландська висловуха. </p>
-    <p> І Макс, і Виска народилися в 2016 році. Вони обидва були моїми першими домашніми тваринами. </p>
+        <p>Мене звати Кріворотова Аліса Юріївна. Я народилася 8 серпня 2003 року в місті Сєвєродонецьк, Луганська область. Зараз живу в Харкові. Я - студентка, з вересня 2020 року навчаюся на факультеті економіки і менеджменту Харківського національного університету будівництва та архітектури. Я першокурсниця, в університеті вивчаю інформаційні системи та технології.</p>
+        <p align="center"><img src="images/itsme.png" alt="Це я" title="Це я" width="500"></p>
+        <h2>Моя сім'я</h2>
+          <p> Моя сім'я складається з чотирьох осіб: моєї мами, мого тата, молодшої сестри та мене. </p>
+          <p> Моя мама, Кріворотова Світлана Григорівна, народилася 30 листопада 1978 року, зараз працює реабілітологом, а також паралельно навчається в університет заочно для того, щоб повисити свою кваліфікацію. </p> 
+          <p> Мій батько, Кріворотов Юрій Васильович, народився 31 серпня 1975 року, працює менеджером у будівельній компанії. </p>
+          <p> Мою молодшу сестру звуть Василіса, їй 11 років, зараз вона вчитися в 6 класі, любить малювати, ліпити, займається скелелазінням і тенісом. </p>
+       <h2>Мої домашні улюбленці</h2>
+          <p>В мене є дві домашні тварини - собака та кішка. </p>
+          <p> Собаку звати Макс, його порода - джек рассел тер'єр. Кішку звати Віска, вона шотландська висловуха. </p>
+          <p> І Макс, і Виска народилися в 2016 році. Вони обидва були моїми першими домашніми тваринами. </p>
     </body>
 </html>
