--- a/index.html
+++ b/index.html
@@ -3,45 +3,49 @@
         <meta charset="utf-8">
         <title>Головна сторінка</title>
         <style>
-            body {
-           background-color: rgb(255, 233, 199);
-         }
-         hr {
-           border: none; 
-               background-color:rgb(253, 193, 62);
-               color:rgb(253, 193, 62);
-               height: 2px; 
-         }
+          body {
+              background: url(images/bgg.jpg);
+              background-size: cover;
+          }
+          hr {
+              border: none;
+              background-color:#06489e;
+              color:#06489e;
+              height: 2px; 
+          }
+          a {
+            text-decoration: none;
+          }
        </style>
     </head>
-    <body>
+    <body link="black" alink="black" vlink="black">
     <hr>
-     <h2 align="center">Доброго ранку / добрий день / добрий вечір!</h2>
+     <h2 align="center">Привіт!</h2>
      <em><h4 align="center">Вітаю вас!</h4></em>
      <hr>
-     <p>Мене звуть Аліса і це сайт, який було створено в якості мого домашнього завдання, а, точніше кажучи, лаборорной роботи №2 по предмету "Веб-технології та веб-дизайн".</p>
+     <p>Мене звуть Аліса і це сайт, який було створено в якості мого домашнього завдання, а, точніше кажучи, лабораторної роботи №2 по предмету "Веб-технології та веб-дизайн".</p>
     <p> Інформація про завдання: </p>
     <p><strong>Метою</strong> работи було дослідження основних правил створення web-сторінок.</p>
     <p><strong> Завданням </strong>роботи була розробка сайту, який містить у собі:</p>
     <ol>
-       <em> <li>index.html </em> - загані відомості про автора та поточну роботу</li>
-       <em> <li>about.html</em> - відомості про розробника (про студента)</li>
+       <em><li>index.html </em> - загані відомості про автора та поточну роботу</li>
+       <em><li>about.html</em> - відомості про розробника (про студента)</li>
        <em><li>myschool.html</em> - відомості про школу, яку ви закінчили</li>
        <em><li>myhobby,html </em>- опис ваших хоббі</li>
        <em><li>myfuture.html</em> - ваше бачення вашого майбутнього</li>
     </ol>
-    <hr>
     <h3>Якщо ви хочете дізнатися більше про мене:</h3> 
-<ul>
-   <<li> <a href="file:///D:/%D1%83%D0%BD%D0%B8%D0%B2%D0%B5%D1%80%D1%81%D0%B8%D1%82%D0%B5%D1%82/%D0%92%D0%B5%D0%B1-%D1%82%D0%B5%D1%85%D0%BD%D0%BE%D0%BB%D0%BE%D0%B3%D0%B8%D0%B8%20%D0%B8%20%D0%B2%D0%B5%D0%B1-%D0%B4%D0%B8%D0%B7%D0%B0%D0%B9%D0%BD/Krivorotova%20Alisa/about.html">Про мене</a></li>
-   <li>
-   <a href="file:///D:/%D1%83%D0%BD%D0%B8%D0%B2%D0%B5%D1%80%D1%81%D0%B8%D1%82%D0%B5%D1%82/%D0%92%D0%B5%D0%B1-%D1%82%D0%B5%D1%85%D0%BD%D0%BE%D0%BB%D0%BE%D0%B3%D0%B8%D0%B8%20%D0%B8%20%D0%B2%D0%B5%D0%B1-%D0%B4%D0%B8%D0%B7%D0%B0%D0%B9%D0%BD/Krivorotova%20Alisa/myschool.html">Про мою школу </a></li>
-   <li>
-   <a href="file:///D:/%D1%83%D0%BD%D0%B8%D0%B2%D0%B5%D1%80%D1%81%D0%B8%D1%82%D0%B5%D1%82/%D0%92%D0%B5%D0%B1-%D1%82%D0%B5%D1%85%D0%BD%D0%BE%D0%BB%D0%BE%D0%B3%D0%B8%D0%B8%20%D0%B8%20%D0%B2%D0%B5%D0%B1-%D0%B4%D0%B8%D0%B7%D0%B0%D0%B9%D0%BD/Krivorotova%20Alisa/myhobby.html">Мої хобі</a>
-   </li>
-   <li>
-   <a href="file:///D:/%D1%83%D0%BD%D0%B8%D0%B2%D0%B5%D1%80%D1%81%D0%B8%D1%82%D0%B5%D1%82/%D0%92%D0%B5%D0%B1-%D1%82%D0%B5%D1%85%D0%BD%D0%BE%D0%BB%D0%BE%D0%B3%D0%B8%D0%B8%20%D0%B8%20%D0%B2%D0%B5%D0%B1-%D0%B4%D0%B8%D0%B7%D0%B0%D0%B9%D0%BD/Krivorotova%20Alisa/myfuture.html">Як я бачу своє майбутнє</a>
-</ul>
-<hr>
+   <ul>
+       <li> <a href="about.html">Про мене</a></li>
+       <li><a href="myschool.html">Про мою школу </a></li>
+       <li><a href="myhobby.html">Мої хобі</a></li>
+       <li><a href="myfuture.html">Як я бачу своє майбутнє</a></li>
+       <li><a href="myschedule.html">Розклад та списки</a></li>
+   </ul>
+   <p align="center"><a href="https://mail.google.com/"><img src="images/icons8-вход-в-gmail-50.png" width="40"></a>
+    <a href="https://www.whatsapp.com/"><img src="images/icons8-whatsapp-80.png" width="40"></a>
+    <a href="https://www.youtube.com/"><img src="images/icons8-youtube-play-80.png" width="40"></a>
+    <a href="https://www.twitter.com/"><img src="images/icons8-твиттер-в-круге-80.png" width="40"></a>
+  </p>
     </body>
 </html>
