--- a/myfuture.html
+++ b/myfuture.html
@@ -4,33 +4,48 @@
         <title>Моє майбутнє</title>
         <style>
             body {
-           background-color: rgb(255, 233, 199);
-         }
-         hr {
-           border: none; 
-               background-color:rgb(253, 193, 62);
-               color:rgb(253, 193, 62);
-               height: 2px; 
-         }
+                background-color:#fff1df;
+            }
+            ul {
+                 list-style: none;
+                 margin: 0;
+                 padding-left: 0;
+                 margin-top: 25px;
+             }
+             a {
+                 text-decoration: none;
+                 background: #f8d7ac;
+                 padding: 10px;
+                 border-radius: 4px;
+                 color: black;
+             }
+             li {
+                 float: left;
+                 margin-right: 5px;
+             }
+             #lol {
+                 background: #f1bc77;
+             }
        </style>
     </head>
     <body>
-        <hr>
         <h1 align="center">Яким я бачу своє майбутнє?</h1>
-        <hr>
+        <ul>
+            <li><a href="about.html">Про мене</a></li>
+            <li><a href="index.html">Головна сторінка</a></li>
+            <li><a href="myschool.html">Про мою школу </a></li>
+            <li><a href="myhobby.html">Мої хобі</a></li>
+            <li><a href="myfuture.html" id="lol">Як я бачу своє майбутнє</a></li>
+            <li><a href="myschedule.html">Розклад та списки</a></li>
+        </ul>
         <br>
-        <br>
-       <p>
-        Важко думати про власне майбутнє, коли мені всього 17 років і я ще зовсім не відчула смак життя. У мене ще є можливість вибору і я до кінця не визначилася в тому, в якому напрямку я хочу себе розвивати. Але мені б хотілося бути впевненою в тому, що мене чекає яскраве і щасливе майбутнє.
+
+        <p>Важко думати про власне майбутнє, коли мені всього 17 років і я ще зовсім не відчула смак життя. У мене ще є можливість вибору і я до кінця не визначилася в тому, в якому напрямку я хочу себе розвивати. Але мені б хотілося бути впевненою в тому, що мене чекає яскраве і щасливе майбутнє.</p>
         <p>Звичайно, зараз моєю головною метою є розвиток себе в напрямку ІТ, можливо, в веб-розробці. Так як зараз закінчення університету не дорівнює успіху в житті, потрібно багато уваги приділяти самонавчанню.</p>
         Крім ІТ напрямку, мені хотілося б поліпшити свої знання мов, а також свої знання в соціальних науках і політиці, тому що, на мою думку, це важливо бути соціально та політично свідомою людиною, особливо у нашому суспільстві.
-        </p> 
-        <p>
-            Було б класно, якби моя майбутня робота приносила мені хороший стабільний заробіток і при цьому була б мені цікава.
-            Хороший заробіток дасть мені повну свободу дій, можливість більше подорожувати, так як подорожі сильно розширюють кругозір і я вважаю це дійсно те, на що варто витрачати свої гроші.
-        </p>
-        <p>
-            Ще в майбутньому мені хотілося б спробувати знайти багато різних хобі, можливо, відкрити в собі нові таланти. Зараз моє коло інтересів є не таким вже і великим, що мені дуже не подобається, тому що я хочу бути цікавою людиною.
-        </p>
+        Було б класно, якби моя майбутня робота приносила мені хороший стабільний заробіток і при цьому була б мені цікава.
+        Хороший заробіток дасть мені повну свободу дій, можливість більше подорожувати, так як подорожі сильно розширюють кругозір і я вважаю це дійсно те, на що варто витрачати свої гроші.
+        <p>Ще в майбутньому мені хотілося б спробувати знайти багато різних хобі, можливо, відкрити в собі нові таланти. Зараз моє коло інтересів є не таким вже і великим, що мені дуже не подобається, тому що я хочу бути цікавою людиною.</p>
+        <p align="center"><img src="images/pr.jfif" alt="Моє майбутнє" title="Моє майбутнє" width="600"></p>
     </body>
 </html>
