--- a/myschool.html
+++ b/myschool.html
@@ -4,33 +4,48 @@
         <title> Моя школа </title>
         <style>
           body {
-            background-color: rgb(255, 233, 199);
+            background-color: #bee2e4;
           }
-          hr {
-            border: none; 
-                background-color:rgb(253, 193, 62);
-                color:rgb(253, 193, 62);
-                height: 2px; 
-          }
-
+          ul {
+                 list-style: none;
+                 margin: 0;
+                 padding-left: 0;
+                 margin-top: 25px;
+             }
+             a {
+                 text-decoration: none;
+                 background: #15bcc2;
+                 padding: 10px;
+                 border-radius: 4px;
+                 color: black;
+             }
+             li {
+                 float: left;
+                 margin-right: 5px;
+             }
+             #lol {
+                 background: #80d8db;
+             }
         </style>
-    </head>
+        </head>
       <body>
-        <hr>
           <h2 align="center">СЕРЕДНЯ ЗАГАЛЬНООСВІТНЯ ШКОЛА І-ІІІ СТУПЕНІВ № 18 МІСТА СЄВЄРОДОНЕЦЬКА ЛУГАНСЬКОЇ ОБЛАСТІ</h2>
-          <hr>
-          <br>
+          <ul>
+            <li><a href="about.html">Про мене</a></li>
+            <li><a href="index.html">Головна сторінка</a></li>
+            <li><a href="myschool.html" id="lol">Про мою школу </a></li>
+            <li><a href="myhobby.html">Мої хобі</a></li>
+            <li><a href="myfuture.html">Як я бачу своє майбутнє</a></li>
+            <li><a href="myschedule.html">Розклад та списки</a></li>
+        </ul>
+        <br>
+        <br>
           <p>
             Я вчилася в цій школі з першого класу, і, до речі, три рази переходила з одного класу в інший. Насправді, нічого видатного в цій школі не було, але це все одно був цікавий і веселий досвід довжиною в 11 років.
           </p>
           <h3>Декілька фактів з історії школи</h3>
-        
-          <p>
-            1 вересня 1989 року школа відкрила свої двері для дітей нового 82 мікрорайону міста Сєвєродонецька. У цей день за парти новенької школи сіли понад 1300 учнів.
-          </p>
-          <p>
-            Будівля нового закладу розташувалася на пісках та на розі вітрів. Завдяки зусиллям директора внутрішні приміщення школи були естетично оформлені, що багато років відрізняє її від інших навчальних закладів. На початку 2000-х навчальний заклад серед приорітетних обрав напрямки профілізації: природничо-математичий, універсальний. Обираючи свій шлях, педагогічний колектив постав перед проблемою збереження здоров'я учасників навчально-виховного процесу. Було створено оригінальну програму "Здоров'я", еколого-валеологічний компонент став наскрізним у навчально-виховному процесі закладу. Педагогічний колектив системно впроваджує у навчально-виховний процес здоров'язберігаючі інноваційні технології. Вперше школа ділиться своїми наробками у 2005 році у форматі обласного семінару для методистів відділів освіти та директорів шкіл Луганської області.
-          </p>
+             <p>1 вересня 1989 року школа відкрила свої двері для дітей нового 82 мікрорайону міста Сєвєродонецька. У цей день за парти новенької школи сіли понад 1300 учнів.</p>
+          <p>Будівля нового закладу розташувалася на пісках та на розі вітрів. Завдяки зусиллям директора внутрішні приміщення школи були естетично оформлені, що багато років відрізняє її від інших навчальних закладів. На початку 2000-х навчальний заклад серед приорітетних обрав напрямки профілізації: природничо-математичий, універсальний. Обираючи свій шлях, педагогічний колектив постав перед проблемою збереження здоров'я учасників навчально-виховного процесу. Було створено оригінальну програму "Здоров'я", еколого-валеологічний компонент став наскрізним у навчально-виховному процесі закладу. Педагогічний колектив системно впроваджує у навчально-виховний процес здоров'язберігаючі інноваційні технології. Вперше школа ділиться своїми наробками у 2005 році у форматі обласного семінару для методистів відділів освіти та директорів шкіл Луганської області.</p>
           <ul>
             <li>У 2007 році заклад стає партнером Обласного департаменту освіти і науки а також Луганського інституту післядипломної педагогічної освіти з питань впровадження інноваційних освітніх технологій.</li>
             <li>У 2012 році вдруге заклад отримує перемогу у Всеукраїнському конкурсі-захисті сучасної моделі "Школи сприяння здоров'ю". Педагогічний колектив отримує сертифікат Міністерства освіти і науки України.</li>
@@ -41,6 +56,6 @@
               2016 року 17–19 березня в Київському Палаці дітей та юнацтва Міністерство освіти і науки України, Національна академія педагогічних наук України і компанія «Виставковий Світ» проводили Сьому Міжнародну виставку «Сучасні заклади освіти – 2016».Тема експозиції «Освіта Луганщини» – «Інноваційно-освітній простір регіону». СЗШ № 18 взяла участь у номінації "Здоров’я та безпека в сучасному інноваційно орієнтованому освітньому просторі". Досвід було визнано актуальним, і заклад отримав нагороду МОНУ і НАПНУ як сучасний інноваційний заклад України.
             </li>
           </ul>
-          
+          <p align="center"><img src="images/schoool.png" alt="Школа" title="Школа" width="600"></p>
       </body>
 </html>
