--- a/myschedule.html
+++ b/myschedule.html
@@ -312,7 +312,12 @@
             <li>Solar System</li> 
         </ul>
          <hr>
-         <p align="center"> <img id="TheMilkyWay" src="images/milky_way.jpg" alt="The Milky Way Galaxy" title="The Milky Way Galaxy" width="550"></p>
+         <p align="center"> <img id="TheMilkyWay" src="images/milky_way.jpg" alt="The Milky Way Galaxy" title="The Milky Way Galaxy" width="550" usemap="#what"></p>
+         <map name="what">
+             <area shape="rect" coords="50,50,0,0" href="https://en.wikipedia.org/wiki/Sun" alt=""The Sun" title="The Sun">
+             <area shape="rect" coords="968,37,0,0" href="https://en.wikipedia.org/wiki/Solar_System" alt="The Solar System" title="The Solar System">
+             <area shape="rect" coords="36,948,0,0" href="https://en.wikipedia.org/wiki/Black_hole" alt="The Black Hole" title="The Black Hole">
+         </map>
          <hr>
          <br>
          <table border="1">
